--- a/content/posts/gene-therapy-telomere-disorders-success.mdx
+++ b/content/posts/gene-therapy-telomere-disorders-success.mdx
@@ -1,5 +1,5 @@
 ---
-title: "First Gene Therapy Shows Sustained Telomere Elongation in Humans"
+title: "Gene Therapy Lengthens Telomeres for First Time in Human History"
 description: "Elixirgen's EXG-34217 achieves breakthrough in treating telomere biology disorders"
 date: "2026-02-12"
 category: "Clinical Trial"
@@ -8,7 +8,7 @@ author: "Longevity Leak Research Team"
 studyUrl: "https://scienceblog.cincinnatichildrens.org/first-gene-therapy-trial-for-telomere-biology-disorders-shows-promising-results/"
 ---
 
-# First Gene Therapy Shows Sustained Telomere Elongation in Humans
+# Gene Therapy Lengthens Telomeres for First Time in Human History
 
 ## Key Findings
 
@@ -46,4 +46,4 @@ Additional studies will help clarify optimal dosing, timing, and population-spec
 
 Access the original full-text paper for deeper clinical validation.
 
-[Read Full Study →](https://scienceblog.cincinnatichildrens.org/first-gene-therapy-trial-for-telomere-biology-disorders-shows-promising-results/)
+[Read Full Study ↗](https://scienceblog.cincinnatichildrens.org/first-gene-therapy-trial-for-telomere-biology-disorders-shows-promising-results/)
