Publish article: Gene Therapy Lengthens Telomeres for First Time in Human History - 2026-02-16

--- a/content/posts/gene-therapy-telomere-disorders-success.mdx
+++ b/content/posts/gene-therapy-telomere-disorders-success.mdx
@@ -1,13 +1,14 @@
 ---
-title: "Gene Therapy Lengthens Telomeres for First Time in Human History"
-description: "Elixirgen's EXG-34217 achieves breakthrough in treating telomere biology disorders"
-date: "2026-02-14"
-category: "Clinical Trial"
+title: Gene Therapy Lengthens Telomeres for First Time in Human History
+description: Elixirgen's EXG-34217 achieves breakthrough in treating telomere biology
+  disorders
+date: '2026-02-16'
+category: Clinical Trial
 featured: false
-author: "Longevity Leak Research Team"
-studyUrl: "https://scienceblog.cincinnatichildrens.org/first-gene-therapy-trial-for-telomere-biology-disorders-shows-promising-results/"
+author: Longevity Leak Research Team
+studyUrl: https://scienceblog.cincinnatichildrens.org/first-gene-therapy-trial-for-telomere-biology-disorders-shows-promising-results/
+published: true
 ---
-
 # Gene Therapy Lengthens Telomeres for First Time in Human History
 
 ## Key Findings
