--- a/content/posts/gene-therapy-telomere-disorders-success.mdx
+++ b/content/posts/gene-therapy-telomere-disorders-success.mdx
@@ -4,7 +4,8 @@ slug: "gene-therapy-telomere-disorders-success"
 date: "2026-02-18"
 excerpt: "EXG-34217, a gene therapy delivering functional TERT, showed telomere elongation and hematopoietic recovery in two patients with dyskeratosis congenita — a rare inherited disease, not general aging. Results published in NEJM Evidence."
 metaDescription: "EXG-34217 gene therapy for dyskeratosis congenita at Cincinnati Children's: telomere elongation in two patients, mechanisms, and what this does and does not mean for healthy aging."
-study_url: "https://scienceblog.cincinnatichildrens.org/first-gene-therapy-trial-for-telomere-biology-disorders-shows-promising-results/"tags:
+study_url: "https://scienceblog.cincinnatichildrens.org/first-gene-therapy-trial-for-telomere-biology-disorders-shows-promising-results/"
+tags:
   - gene-therapy
   - telomeres
   - rare-disease
